# spiel-installer

./: README.md  meson.build
.github/workflows/: build-repo.yml  main.yml
build-aux/: org.project_spiel.SpielInstaller.json  python3-modules.json
data/: meson.build  org.project_spiel.SpielInstaller.desktop.in  org.project_spiel.SpielInstaller.gschema.xml  org.project_spiel.SpielInstaller.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  spiel-installer.in  spielinstaller.gresource.xml  style.css  voice_row.py  voice_row.ui  voices_store.py  window.py  window.ui
src/gtk/: help-overlay.ui
